app/assets/stylesheets/home.css.scss
#search-panel {
  font-family: Verdana !important;
  font-size: 10pt !important;
  padding-top: 0px;

  a {
    font-family: Verdana !important;
    font-size: 10pt !important;
  }

  label {
    font-weight: normal;
  }

  .search-form {
    margin: 0;
    padding: 0;
    border: 0;
    outline: 0;
    font-size: 100%;
    vertical-align: baseline;
    background: transparent;
    display: block;
    line-height: normal;
    color: #333;
  }

  .search_box-wrapper {
    padding: 10px 15px;
    font-size: 1em;
    background-color: #FF6600;
    border-bottom: 1px solid #dddddd;
    border-top-right-radius: 3px;
    border-top-left-radius: 3px;
    max-width: 100%;
    margin: 0px auto;
  }

  .search_box {
    margin: 0px 0 0 0;
    padding: 0 0 0 0;
    position: relative;
    height: 45px;
  }

  #inputfield {
    margin-right: 56px;
  }

  #inputfield input {
    width: 100%;
    height: 45px;
    display: block;
    border: 1px solid #cfcfcf;
    color: #000;
    border-top-left-radius: 4px;
    border-bottom-left-radius: 4px;
    -webkit-appearance: none;
    padding: 10px 13px 10px 13px;
    line-height: 23px;
    float: left;
    font-size: 1em;
    background-color: white;
    -webkit-rtl-ordering: logical;
    -webkit-user-select: text;
    cursor: auto;
    margin: 0em;
    border-radius: 4px 0px 0px 4px;
  }
  .search_box #inputfield input:focus {
    outline-width: 0px;
    border: 1px solid #999;
  }
  .search_box #inputfield input:hover {
    border: 1px solid #999;
  }
  .search_box_shadow {
    -webkit-box-shadow: 0px 0px 2px 0px #2E61E4;
      -moz-box-shadow: 0px 0px 2px 0px #2E61E4;
      box-shadow: 0px 0px 2px 0px #2E61E4;
  }
  .search_box .searchbutton {
    cursor: pointer;
    display: inline-block;
    padding: 0px;
    width: 56px;
    height: 45px;
    margin: 0px 0 0 -1px;
    border-top-right-radius: 4px;
    border-bottom-right-radius: 4px;
    background-color: #FFFFFF;
    border: 1px solid #999;
    text-align: center;
    color: #FF6600;
  }

  .searchbutton {
    [class^="icon-"], [class*=" icon-"] {
      display:inline-block;
      margin-top: 10px;
      vertical-align: middle;
    }
  }

  #created_at, #item_type, #advanced-search {
    font-size: 0.8em;
    margin: 0px;
  }

  #stats {
    margin-top: 10px;
    margin-bottom: 5px;
    font-size: 0.8em;
    a {
      font-size: 11px !important;
    }
  }

  #style-toggler {
    z-index: 100;
    position: absolute;
    top: 0px;
    right: 5px;

    a {
      font-size: 7pt !important;
    }

    a:hover {
      text-decoration: none;
      color: black;
    }
  }

  .branding {
    margin-top: 13px;
    margin-left: -15px;
    font-size: 11px !important;
    a {
      font-size: 11px !important;
      text-decoration: underline;
    }
  }

  #hits {
    font-size: 1em;

    .hit {
      color: #828282;
      font-size: 14px;
      padding: 5px 10px;
      margin-bottom: 10px;

      em {
        font-weight: bold;
        font-style: normal;
      }

      .thumb {
        margin-bottom: 10px;
        margin-right: 10px;
        width: 80px;
        height: 50px;
        overflow: hidden;
        position: relative;

        img {
          width: 100%;
        }
      }

      .title_url {
        margin-left: 84px;
      }

      .title {
        background: url(asset_path('grayarrow.gif')) center left no-repeat;
        background-size: 10px;
        padding-left: 15px;
        white-space: nowrap;
        overflow: hidden;
        max-width: 100%;
        text-overflow: ellipsis;
        font-size: 9pt;

        a {
          text-decoration: underline;
          color: black;
          font-size: 10pt !important;
        }
      }

      .url {
        white-space: nowrap;
        overflow: hidden;
        text-overflow: ellipsis;
        max-width: 50%;
        a {
          font-size: 9pt !important;
        }
      }

      .comment_text, .story_text {
        text-align: justify;
        font-size: 9pt !important;
        margin-left: 10px;
        color: black;
      }

      .comment_text {
        border-left: 3px solid #c2c2c2;
        padding-left: 10px;
      }

      .points, .comments, .created_at, .author {
        float: left;
        margin-right: 5px;
        font-size: 7pt !important;

        a {
          font-size: 7pt !important;
        }
      }

    }

    a, a:visited, a:hover {
      color: #828282;
    }

    .hit.odd {
    }

    .hit:hover, .hit.active {
    }

    .hit.notypo .title {
    }

  }

  .pagination a {
    background: transparent;
  }

  .pagination a:hover {
    color: #ff6600;
  }

  .pagination .active a {
    background-color: #ff6600;
    border-color: #ff6600;
  }
  .pagination .active a:hover {
    color: black;
  }

  #history {
    margin-top: 10px;
  }

}

#hits.follow {

  .title {
    display: none !important;
  }

}



body.legacy {
  background: white;

  #main {
    .container {
      width: 85%;
      margin-top: 8px;
      background: #f6f6ef;

      #search-panel {
        position: relative;
        padding-top: 0px;

        h1 {
          display: none;
        }

        .branding {
          position: absolute;
          right: -320px;
          top: -7px;
        }

        #search-form {
          padding: 0px;
          background: #FF6600;
          position: relative;

          #item_type {
            position: absolute;
            bottom: 0px;
            left: 0px;
          }

          #advanced-search {
            display: none !important;
          }

          .search_box-wrapper {
            border-bottom: none;
            background: transparent;
            width: 400px;
            margin: 0px;
            padding: 5px;
            padding-left: 5px;

            .search_box {
              height: auto;
            }

            #inputfield {
              margin-right: 0px;

              input {
                border-radius: 0px;
                height: auto;
                font-size: 14px;
                padding: 2px 5px;
                float: none;
              }
            }

            .searchbutton {
              display: none;
            }
          }
        }

        #hits {
          .hit {
            margin: 0px;
            margin-bottom: 10px;
            padding: 0px 5px;
          }

          .thumb {
            display: none !important;
          }

          .title_url {
            margin-left: 0px;
          }

          .comment_text {
            border: 0px;
            margin-left: 25px;
          }

          em {
            background: yellow;
          }
        }
      }
    }
  }
}

.dropdown-menu {
  position: static !important;

  em {
    font-style: normal;
    font-weight: bold;
  }
}

footer {
  margin-top: 10px;
}

@media (max-width: 767px) {
  #search-panel {
    padding-top: 0px;

    .title_url {
      margin-left: 0px !important;
    }

    h1 {
      margin-top: 0px;
      font-size: 24px;
    }
  }
}

